# verilog_tools

./: .gitignore  LICENSE  MANIFEST.in  Makefile  README.md  default.nix  derivation.nix  flake.nix  pyproject.toml  setup.py  shell.nix
.github/workflows/: ci.yml  docs.yml  lint.yml  release.yml  tests.yml
nix/: sources.json
sv_yosys/: __main__.py  _cli.py
sv_yosys/utils/: external.py  timer.py
sv_yosys/yosys/: netlistify.py  yosys.py  yosys_stat.py
test/: imul.blif  imul.v  test_init.py
verilog_tools/blif_lint/: blif_lint.py
verilog_tools/bristolify/: fieldswitch_to_bin.py  netlist_to_bristol.py  test_gates.py
verilog_tools/compositor/: __init__.py  run_compositor.py
verilog_tools/lucid/: run_lucid.py
verilog_tools/reverie/: run_reverie.py
verilog_tools/yosys/: netlistify.py  yosys.py  yosys_stat.py
verilog_tools/yosys/corpus/: eval_bristol.py
