[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "sv-yosys"
dynamic = ["version"]
description = "Yosys wrappers for SIEVE ZK-circuit synthesis."
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "Trail of Bits", email = "opensource@trailofbits.com" },
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
]
dependencies = [
    "psutil",
    "pwntools"
]
requires-python = ">=3.8"

[project.optional-dependencies]
doc = ["pdoc"]
test = ["pytest", "pytest-cov", "pretend", "coverage[toml]"]
lint = [
    "black>=22.3.0",
    # NOTE: ruff is under active development, so we pin conservatively here
    # and let Dependabot periodically perform this update.
    "ruff < 0.0.255",
    "mypy >= 1.0",
    "types-html5lib",
    "types-requests",
    "types-toml",
    "interrogate",
]
dev = ["sv-yosys[doc,test,lint]", "twine", "wheel", "build"]

[project.scripts]
"sv-netlist" = "sv_yosys.yosys.yosys_stat:main"
"sv-stat" = "sv_yosys.yosys.netlistify:main"

[project.urls]
Homepage = "https://pypi.org/project/sv-yosys"
Documentation = "https://trailofbits.github.io/sv-yosys/"
Issues = "https://github.com/trailofbits/sv-yosys/issues"
Source = "https://github.com/trailofbits/sv-yosys"

[tool.black]
line-length = 100

[tool.coverage.run]
# don't attempt code coverage for the CLI entrypoints
omit = ["sv_yosys/_cli.py"]

[tool.mypy]
allow_redefinition = true
check_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
ignore_missing_imports = true
no_implicit_optional = true
show_error_codes = true
sqlite_cache = true
strict_equality = true
warn_no_return = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true
warn_unused_ignores = true

[tool.ruff]
line-length = 100
select = ["E", "F", "W", "UP", "I", "N", "YTT", "BLE", "C4", "SIM"]
target-version = "py38"

[tool.interrogate]
# don't enforce documentation coverage for packaging, testing, the virtual
# environment, or the CLI (which is documented separately).
exclude = ["env", "test", "sv_yosys/_cli.py"]
ignore-semiprivate = true
# FIXME(jl): increase docstring coverage
fail-under = 0
